--- a/src/index.css
+++ b/src/index.css
@@ -61,5 +61,10 @@
 .bnd button{
     color: #f05a66;
     background-color: white;
+}
+.image-container .hidden{
     transition: all ease-in-out 0.5s;
+}
+.image-container:hover .hidden{
+ display: block;
 }
