--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
     text-transform: uppercase;
     line-height: 66px;
 }
-.banner-items button {
+.banner-items button, .size-btn button {
     font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
@@ -67,4 +67,20 @@
 }
 .image-container:hover .hidden{
  display: block;
+}
+.modal-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 111;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-content{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 20px;
 }
